--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-{% extends 'base.html' %}
+<!DOCTYPE html>
+<html>
+<head>
+	<meta http-equiv="refresh" content="0; url=/templates/index.html">
+
+</head>
+<body>
+</body>
+</html>
